# Labs

1/: CMakeLists.txt  main.c
2/: ArraySequence.h  CMakeLists.txt  DynArray.h  DynArrayElem.h  Exception.h  LinkList.h  ListElem.h  ListSequence.h  Node.h  Queue.h  Sequence.h  SingleLinkList.h  Tree.h  main.cpp  queueTester.h
3rd_lab/: CMakeLists.txt  NTree.hpp  Node.hpp  dynamicArray.hpp  main.cpp
Sems/: bracketsGenerator.c  f.c  fib.c  flip.c  sad.c
Sems/Students/: DynArray.h  StudList.cpp  Student.h
